TP_4/mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: tp-app-mysql
spec:
  serviceName: "mysql"
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      automountServiceAccountToken: false
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
              name: mysql
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
              ephemeral-storage: "100Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
              ephemeral-storage: "500Mi"
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
      # On utilise l'image locale si besoin, mais ici mysql:8.0 est standard
  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
